# 13OOP

./: pyproject.toml
srs/: currency_rates.json  main.py
